<resources>
    <string name="app_name">MediCare</string>
    <string name="text_login">Log In</string>
    <string name="text_signIn">Sign In</string>
    <string name="label_email">Email</string>
    <string name="input_email">Enter your email</string>
    <string name="label_password">Password</string>
    <string name="input_password">Enter your password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="input_confirm_password">Confirm password</string>
    <string name="button_send">Send</string>
    <string name="button_back">Back</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_profile">Profile</string>
    <string name="text_name">Name</string>
    <string name="text_lastName">Last Name</string>
    <string name="text_address">Address</string>
    <string name="text_gender">Gender</string>
    <string name="text_date">Date</string>
    <string name="text_birth_date">Birth Date</string>
    <string name="text_save">Save</string>
    <string name="text_delete">Delete</string>
    <string name="text_cancel_turn">Cancel Turn</string>
    <string name="text_cardiology">Cardiology</string>
    <string name="text_date_example">18/07/2023</string>
    <string name="text_time_example">10:30</string>
    <string name="text_map">Map</string>
    <string name="text_create">Create</string>
    <string name="text_time">Time</string>
    <string name="text_medical_speciality">Medical Speciality</string>
    <string name="text_new_turn">New Turn</string>
    <!-- USER SCREEN -->
    <string name="menu_home">Home</string>
    <string name="menu_new_turn">New Turn</string>
    <string name="menu_turns">Turns</string>
    <string name="menu_user">User</string>
</resources>